--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,14 @@
         <item name="android:windowBackground">@color/PayPro_Blue</item>
     </style>
 
+    <style name="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginRight">30dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
+    </style>
+
 
     <!--<style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">-->
         <!--<item name="searchIcon">@drawable/ic_search_white_24dp</item>-->
