limit character for bitcoin address

--- a/app/src/main/res/layout/sendmoney_address_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_address_fragment.xml
@@ -80,6 +80,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
                     android:ems="17"
+                    android:maxLength="35"
                     android:maxLines="1"
                     android:ellipsize="end"
                     android:gravity="center"
