--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,11 +17,6 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="PayProTheme" parent="AppTheme" >
-        <item name="android:colorBackground">@color/PayPro_Blue</item>
-        <item name="android:windowBackground">@color/PayPro_Blue</item>
-    </style>
-
     <style name="Divider">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
@@ -41,21 +36,14 @@
         <item name="android:clickable">true</item>
     </style>
 
-
-    <!--<style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">-->
-        <!--<item name="searchIcon">@drawable/ic_search_white_24dp</item>-->
-        <!--<item name="closeIcon">@drawable/ic_close_white_24dp</item>-->
-        <!--<item name="searchHintIcon">@null</item>-->
-        <!--<item name="queryHint">@string/search_hint</item>-->
-        <!--<item name="queryBackground">@android:color/transparent</item>-->
-    <!--</style>-->
-
     <style name="AppTheme.ActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@android:color/white</item>
         <item name="colorAccent">@android:color/white</item>
     </style>
+
+    <style name="PayProTheme" parent="AppTheme" />
 
 
 </resources>
