--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,14 +41,10 @@
         <item name="android:clickable">true</item>
     </style>
 
+    <style name="PPAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@android:color/black</item>
+    </style>
 
-    <!--<style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">-->
-        <!--<item name="searchIcon">@drawable/ic_search_white_24dp</item>-->
-        <!--<item name="closeIcon">@drawable/ic_close_white_24dp</item>-->
-        <!--<item name="searchHintIcon">@null</item>-->
-        <!--<item name="queryHint">@string/search_hint</item>-->
-        <!--<item name="queryBackground">@android:color/transparent</item>-->
-    <!--</style>-->
 
     <style name="AppTheme.ActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
