--- a/app/src/main/res/layout/contacts_list_fragment.xml
+++ b/app/src/main/res/layout/contacts_list_fragment.xml
@@ -151,6 +151,31 @@
                 android:textAlignment="center"
                 android:text="@string/contacts_permission_denied_text" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/connection_error_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:gravity="center"
+            android:clickable="false">
+
+            <ImageView
+                android:id="@+id/connection_error_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:srcCompat="@drawable/ic_cloud_off_black_24dp" />
+
+            <TextView
+                android:id="@+id/connection_error_text"
+                android:layout_marginTop="20dp"
+                android:textSize="25sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no_internet" />
+
 
         </LinearLayout>
 
