--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -6,60 +6,11 @@
     android:layout_height="match_parent"
     android:background="@color/app_ico_background">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/PayPro_Blue"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/backButtonToolbarProfileEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="56dp"
-        android:background="@color/defaultBackgroundColor"
-        android:contentDescription="@string/todo"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:tint="@color/ic_launcher_background"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="?attr/actionModeCloseDrawable"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <Button
-        android:id="@+id/buttonDoneProfileView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:height="56dp"
-        android:background="@color/defaultBackgroundColor"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="@string/done"
-        android:textColor="@color/dot_dark_slider"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ProgressBar
-        android:id="@+id/progressBarProfileView"
-        android:layout_width="?attr/actionBarSize"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_marginRight="16dp"
-        android:padding="15dp"
-        android:indeterminate="true"
-        android:indeterminateDrawable="@drawable/custom_progress_loader"
-        android:visibility="gone"
-        app:layout_constraintRight_toRightOf="@+id/toolbar2" />
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="56dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/toolbar2">
+        app:layout_constraintRight_toRightOf="parent">
 
         <EditText
             android:id="@+id/inputNickname"
