--- a/app/src/main/res/layout/account_tab.xml
+++ b/app/src/main/res/layout/account_tab.xml
@@ -14,7 +14,8 @@ tools:context=".AccountFragment">
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:elevation="0dp">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/topPanel"
@@ -50,7 +51,7 @@ tools:context=".AccountFragment">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="50dp"
-                        android:layout_marginBottom="3dp"
+                        android:layout_marginTop="4dp"
                         android:layout_marginRight="7dp"
                         android:gravity="center">
 
@@ -78,7 +79,6 @@ tools:context=".AccountFragment">
                         android:textColor="@android:color/white"
                         android:textSize="25sp" />
 
-
                 </LinearLayout>
 
             </LinearLayout>
@@ -93,7 +93,6 @@ tools:context=".AccountFragment">
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
         </android.support.constraint.ConstraintLayout>
-
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
