--- a/app/src/main/res/layout/account_transactions_tab.xml
+++ b/app/src/main/res/layout/account_transactions_tab.xml
@@ -4,20 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View style="@style/Divider"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/bg_gray">
+        android:layout_height="30dp"
+        android:background="@color/bg_gray"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/latest_transactions_header_text"
             android:textSize="15sp"
-            android:padding="10dp"
+            android:paddingLeft="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/latest_transactions_header" />
 
     </RelativeLayout>
+
+    <View style="@style/Divider"/>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
