--- a/app/src/main/res/layout/transaction_list_item.xml
+++ b/app/src/main/res/layout/transaction_list_item.xml
@@ -2,17 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-
+    android:layout_height="110dp"
     android:paddingTop="15dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
     android:orientation="vertical">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:paddingRight="30dp"
+        android:paddingLeft="30dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -98,6 +98,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:paddingRight="30dp"
+        android:paddingLeft="30dp"
+        android:paddingBottom="4dp"
         android:orientation="vertical">
 
         <TextView
@@ -116,5 +119,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
     </LinearLayout>
+    <View style="@style/DividerWithStartMargin"/>
 
 </LinearLayout>
