--- a/app/src/main/res/layout/account_tab.xml
+++ b/app/src/main/res/layout/account_tab.xml
@@ -8,20 +8,12 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".AccountFragment">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:elevation="0dp">
-
         <android.support.constraint.ConstraintLayout
             android:id="@+id/topPanel"
             android:layout_width="match_parent"
             android:layout_height="217dp"
-            android:elevation="2dp"
+            android:elevation="0dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark"
             android:background="@drawable/gradient">
 
             <LinearLayout
@@ -93,13 +85,12 @@ tools:context=".AccountFragment">
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
         </android.support.constraint.ConstraintLayout>
-    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/appbar"
+        app:layout_constraintTop_toBottomOf="@id/topPanel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
