--- a/app/src/main/res/layout/transaction_list_item.xml
+++ b/app/src/main/res/layout/transaction_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="110dp"
-    android:paddingTop="15dp"
+    android:paddingTop="5dp"
     android:orientation="vertical">
 
 
@@ -41,7 +41,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingTop="2dp"
+                    android:paddingTop="6dp"
                     android:layout_marginRight="4dp">
 
                     <ImageView
@@ -64,7 +64,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="right"
-                    android:text="10,000.23" />
+                    android:layout_gravity="center"
+                    android:text="" />
 
             </LinearLayout>
 
