--- a/app/src/main/res/layout/transaction_list_item.xml
+++ b/app/src/main/res/layout/transaction_list_item.xml
@@ -38,6 +38,15 @@
                 android:gravity="right"
                 android:layout_height="wrap_content">
 
+                <TextView
+                    android:id="@+id/amount_sign"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:paddingRight="4dp"
+                    android:layout_gravity="center"
+                    android:text="" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
