--- a/app/src/main/res/layout/fragment_show_qr.xml
+++ b/app/src/main/res/layout/fragment_show_qr.xml
@@ -3,33 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
-
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            android:textColor="@android:color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
-            app:title="@string/show_qr_title"
-            app:titleTextColor="@android:color/white"/>
-
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize">
+    android:gravity="center"
+    android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/qr_code"
@@ -64,6 +39,5 @@
         </LinearLayout>
 
 
-    </android.support.constraint.ConstraintLayout>
-
 </android.support.constraint.ConstraintLayout>
+
