--- a/app/src/main/res/layout/sendmoney_amount_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_amount_fragment.xml
@@ -6,45 +6,10 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/appbar">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:textColor="@android:color/white"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
-            app:titleTextColor="@android:color/white"
-            app:title="@string/amount_title"
-            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <Button
-                android:id="@+id/next_button"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:text="@string/confirmation_code_actionbar"
-                android:textColor="@color/inactive_grey"
-                android:layout_gravity="right"
-                android:enabled="false"/>
-
-        </android.support.v7.widget.Toolbar>
-
-    </android.support.design.widget.AppBarLayout>
-
     <android.support.constraint.ConstraintLayout
         android:id="@+id/main_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appbar">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,6 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dp"
+                android:paddingRight="20dp"
+                android:paddingLeft="20dp"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toTopOf="@+id/view"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -74,21 +41,21 @@
                     android:labelFor="@id/amount_input"
                     android:text="@string/bits_lowercase"
                     android:textColor="@android:color/black"
-                    android:textSize="30dp" />
+                    android:textSize="30sp" />
 
                 <EditText
                     android:id="@+id/amount_input"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="3"
                     android:maxLength="11"
                     android:background="@android:color/transparent"
-                    android:gravity="left"
-                    android:paddingLeft="25dp"
+                    android:gravity="center"
                     android:hint="@string/amount_placeholder"
                     android:inputType="numberDecimal"
                     android:textColor="@color/colorAccent"
-                    android:textSize="30dp" />
+                    android:textSize="30sp"
+                    android:autoSizeMinTextSize="14sp" />
 
 
             </LinearLayout>
@@ -97,9 +64,6 @@
                 android:id="@+id/view"
                 style="@style/DividerWithStartEndMargin"
                 app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
             <LinearLayout
@@ -107,6 +71,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
+                android:paddingRight="20dp"
+                android:paddingLeft="20dp"
                 android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
