--- a/app/src/main/res/layout/sendmoney_send_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_send_fragment.xml
@@ -6,77 +6,66 @@
     android:layout_height="match_parent"
     android:background="@color/bg_gray">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/appbar">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:textColor="@android:color/white"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
-            app:titleTextColor="@android:color/white"
-            app:title="@string/send_title"
-            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        </android.support.v7.widget.Toolbar>
-
-    </android.support.design.widget.AppBarLayout>
-
     <android.support.constraint.ConstraintLayout
         android:id="@+id/main_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        app:layout_constraintTop_toBottomOf="@+id/appbar">
+        app:layout_constraintTop_toBottomOf="parent">
+
+        <View
+            style="@style/Divider"
+            app:layout_constraintTop_toBottomOf="parent" />
 
         <TextView
             android:id="@+id/ready_to_send_label"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="43dp"
+            android:gravity="bottom"
             android:textIsSelectable="false"
-            android:paddingBottom="10dp"
-            android:paddingLeft="17dp"
-            android:paddingTop="25dp"
-            android:text="@string/ready_to_send" />
+            android:paddingBottom="7dp"
+            android:paddingLeft="15dp"
+            android:paddingStart="15dp"
+            android:text="@string/ready_to_send"
+            android:textSize="13sp"/>
+
+        <View
+            style="@style/Divider"
+            app:layout_constraintTop_toBottomOf="@id/ready_to_send_label" />
 
         <TextView
             android:id="@+id/ready_to_send_text"
             android:layout_width="match_parent"
             android:textIsSelectable="false"
-            android:layout_height="110dp"
+            android:layout_height="106dp"
             android:background="@android:color/white"
+            android:textColor="@android:color/black"
             android:gravity="center_vertical"
-            android:paddingLeft="17dp"
-            android:paddingStart="17dp"
-            android:textSize="25sp"
+            android:paddingLeft="15dp"
+            android:paddingStart="15dp"
+            android:textSize="36sp"
             app:layout_constraintTop_toBottomOf="@id/ready_to_send_label" />
 
         <TextView
             android:id="@+id/to_label"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="43dp"
+            android:gravity="bottom"
             android:textIsSelectable="false"
-            android:paddingBottom="10dp"
-            android:paddingLeft="17dp"
-            android:paddingTop="25dp"
+            android:paddingBottom="7dp"
+            android:paddingLeft="15dp"
+            android:paddingStart="15dp"
             android:text="@string/to"
-            app:layout_constraintTop_toBottomOf="@id/ready_to_send_text" />
+            app:layout_constraintTop_toBottomOf="@id/ready_to_send_text"
+            android:textSize="13sp"/>
 
         <LinearLayout
             android:id="@+id/to_text"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="99dp"
             android:background="@android:color/white"
             android:orientation="vertical"
-            android:paddingLeft="17dp"
-            android:paddingStart="17dp"
+            android:paddingLeft="15dp"
+            android:paddingStart="15dp"
             android:paddingTop="5dp"
             app:layout_constraintTop_toBottomOf="@id/to_label">
 
@@ -85,7 +74,8 @@
                 android:textIsSelectable="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="17sp"
+                android:textColor="@android:color/black"
                 app:layout_constraintTop_toBottomOf="@id/to_label" />
 
             <TextView
@@ -93,7 +83,8 @@
                 android:textIsSelectable="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="17sp"
+                android:textColor="@android:color/black"
                 app:layout_constraintTop_toBottomOf="@id/to_text_1" />
 
             <TextView
@@ -101,7 +92,8 @@
                 android:textIsSelectable="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="17sp"
+                android:textColor="@android:color/black"
                 app:layout_constraintTop_toBottomOf="@id/to_text_2" />
 
             <TextView
@@ -109,24 +101,36 @@
                 android:textIsSelectable="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="17sp"
+                android:textColor="@android:color/black"
                 app:layout_constraintTop_toBottomOf="@id/to_text_3" />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/cell_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/cell_description"
+            android:paddingTop="5dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textColor="@android:color/black"
+            app:layout_constraintTop_toBottomOf="@id/to_text"
+            android:textSize="13sp"/>
 
 
         <LinearLayout
             android:id="@+id/activity_indicator"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="58dp"
             android:orientation="horizontal"
             android:visibility="invisible"
-            android:gravity="center_vertical"
+            android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/to_text"
-            app:layout_constraintBottom_toTopOf="@id/swipe_btn_layout"
+            app:layout_constraintTop_toBottomOf="@id/cell_description"
             app:layout_constraintVertical_bias="0.5">
 
             <ProgressBar
@@ -141,23 +145,18 @@
         <LinearLayout
             android:id="@+id/swipe_btn_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="72dp"
             android:gravity="center_vertical"
-            android:layout_marginBottom="40dp"
-            android:layout_marginEnd="40dp"
+            android:layout_marginEnd="45dp"
             android:layout_marginRight="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/activity_indicator">
 
             <app.paypro.payproapp.ui.button.swipe.SwipeButton
                 android:id="@+id/swipe_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:button_background="@drawable/shape_swipe_button"
-                app:button_image_height="60dp"
                 app:initial_state="disabled"
                 app:inner_text="@string/swipe_to_send"
-                app:inner_text_background="@drawable/shape_swipe_rounded"
                 app:inner_text_bottom_padding="18dp"
                 app:inner_text_color="@color/pp_purple"
                 app:inner_text_size="16sp"
