--- a/app/src/main/res/layout/activity_sms_code.xml
+++ b/app/src/main/res/layout/activity_sms_code.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/bg_basic"
+    android:background="@color/pp_light_purple"
     android:gravity="center_horizontal">
 
     <TextView
