--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -35,7 +35,7 @@ android:layout_height="match_parent">
             android:background="@color/defaultBackgroundColor"
             android:paddingLeft="5dp"
             android:paddingRight="70dp"
-            android:tint="@color/PayPro_Blue"
+            android:tint="@color/pp_light_purple"
             android:visibility="invisible"
             app:srcCompat="?attr/actionModeCloseDrawable" />
 
@@ -48,7 +48,7 @@ android:layout_height="match_parent">
             android:gravity="center_vertical"
             android:paddingLeft="30dp"
             android:text="TextView"
-            android:textColor="@color/PayPro_Blue"
+            android:textColor="@color/pp_light_purple"
             android:visibility="invisible" />
 
         <TextView
@@ -71,7 +71,7 @@ android:layout_height="match_parent">
             android:layout_centerVertical="true"
             android:background="@color/defaultBackgroundColor"
             android:text="Confirm"
-            android:textColor="@color/PayPro_Blue"
+            android:textColor="@color/pp_light_purple"
             android:visibility="invisible" />
 
         <ProgressBar
