--- a/app/src/main/res/layout/contacts_list_fragment.xml
+++ b/app/src/main/res/layout/contacts_list_fragment.xml
@@ -11,7 +11,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:theme="@style/AppTheme.ActionBar"
+        android:theme="@style/PayProTheme.ActionBar"
         android:id="@+id/appbar">
 
         <android.support.v7.widget.Toolbar
@@ -19,7 +19,7 @@
             android:textColor="@android:color/white"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
+            android:background="?colorPrimary"
             app:titleTextColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -183,7 +183,7 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
-            app:backgroundTint="@color/pp_purple"
+            app:backgroundTint="?colorPrimary"
             android:visibility="visible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
