--- a/app/src/main/res/layout/sendmoney_address_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_address_fragment.xml
@@ -5,46 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/bg_gray">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/appbar">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:textColor="@android:color/white"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
-            app:titleTextColor="@android:color/white"
-            app:title="@string/bitcoin_address_title"
-            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/content">
-
-            <Button
-                android:id="@+id/next_button"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:text="@string/confirmation_code_actionbar"
-                android:textColor="@color/inactive_grey"
-                android:layout_gravity="right"
-                android:enabled="false"/>
-
-        </android.support.v7.widget.Toolbar>
-
-    </android.support.design.widget.AppBarLayout>
-
     <android.support.constraint.ConstraintLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize"
-        app:layout_constraintTop_toBottomOf="@+id/appbar">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
