--- a/app/src/main/res/layout/account_info_tab.xml
+++ b/app/src/main/res/layout/account_info_tab.xml
@@ -104,6 +104,8 @@
 
             </android.support.constraint.ConstraintLayout>
 
+            <View style="@style/Divider"/>
+
         </LinearLayout>
 
     </LinearLayout>
