--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
 android:id="@+id/activity_main"
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,116 +9,179 @@ android:layout_height="match_parent">
     <android.support.v7.widget.Toolbar
         android:id="@+id/app_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="@dimen/custom_toolbar_height"
         android:background="@color/PayPro_NavigationBar"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme">
     </android.support.v7.widget.Toolbar>
 
     <RelativeLayout
-        android:id="@+id/app_toolbar_layout"
+        android:id="@+id/app_custom_toolbars"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@color/PayPro_NavigationBar"
-        android:clickable="false"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/app_toolbar">
 
-        <ImageButton
-            android:id="@+id/app_toolbar_back_button_image"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="0dp"
-            android:background="@color/defaultBackgroundColor"
-            android:paddingLeft="5dp"
-            android:paddingRight="70dp"
-            android:tint="@color/pp_light_purple"
-            android:visibility="invisible"
-            app:srcCompat="?attr/actionModeCloseDrawable" />
+        <RelativeLayout
+            android:id="@+id/app_toolbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/custom_toolbar_height"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@color/PayPro_NavigationBar"
+            android:clickable="false"
+            android:gravity="center_vertical">
 
-        <TextView
-            android:id="@+id/app_toolbar_back_button_text"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="false"
-            android:layout_centerVertical="false"
-            android:gravity="center_vertical"
-            android:paddingLeft="30dp"
-            android:text="TextView"
-            android:textColor="@color/pp_light_purple"
-            android:visibility="invisible" />
+            <ImageButton
+                android:id="@+id/app_toolbar_back_button_image"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="0dp"
+                android:background="@color/defaultBackgroundColor"
+                android:paddingLeft="5dp"
+                android:paddingRight="70dp"
+                android:tint="@color/pp_light_purple"
+                android:visibility="invisible"
+                app:srcCompat="?attr/actionModeCloseDrawable" />
 
-        <TextView
-            android:id="@+id/app_toolbar_title"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="TextView"
-            android:textColor="@color/defaultTextColor"
-            android:textStyle="normal" />
+            <TextView
+                android:id="@+id/app_toolbar_back_button_text"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="false"
+                android:layout_centerVertical="false"
+                android:gravity="center_vertical"
+                android:paddingLeft="30dp"
+                android:text="TextView"
+                android:textColor="@color/pp_light_purple"
+                android:visibility="invisible" />
 
-        <Button
-            android:id="@+id/app_toolbar_confirm_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@color/defaultBackgroundColor"
-            android:text="Confirm"
-            android:textColor="@color/pp_light_purple"
-            android:visibility="invisible" />
+            <TextView
+                android:id="@+id/app_toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="TextView"
+                android:textColor="@color/defaultTextColor"
+                android:textStyle="normal" />
 
-        <ProgressBar
-            android:id="@+id/app_toolbar_progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="17dp"
-            android:layout_marginRight="17dp"
-            android:indeterminate="true"
-            android:indeterminateDrawable="@drawable/custom_progress_loader_blue"
-            android:visibility="invisible" />
+            <Button
+                android:id="@+id/app_toolbar_confirm_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@color/defaultBackgroundColor"
+                android:text="Confirm"
+                android:textColor="@color/pp_light_purple"
+                android:visibility="invisible" />
+
+            <ProgressBar
+                android:id="@+id/app_toolbar_progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="17dp"
+                android:layout_marginRight="17dp"
+                android:indeterminate="true"
+                android:indeterminateDrawable="@drawable/custom_progress_loader_blue"
+                android:visibility="invisible" />
+
+            <ImageButton
+                android:id="@+id/app_toolbar_search_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:paddingRight="17dp"
+                android:paddingLeft="17dp"
+                android:background="@android:color/transparent"
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_search_black_24dp"/>
+
+        </RelativeLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/search_view"
+            android:visibility="gone"
+            android:background="@color/PayPro_NavigationBar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/custom_search_toolbar_height">
+
+            <ImageButton
+                android:id="@+id/search_back_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingRight="17dp"
+                android:paddingLeft="17dp"
+                android:background="@android:color/transparent"
+                android:tint="?colorAccent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:srcCompat="@drawable/ic_arrow_back_white_24dp" />
+
+            <EditText
+                android:id="@+id/search_text"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                style="@style/SearchView"
+                android:hint="@string/search_hint"
+                android:background="@android:color/transparent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/search_close_button"
+                app:layout_constraintStart_toEndOf="@id/search_back_button" />
+
+            <ImageButton
+                android:id="@+id/search_close_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingRight="17dp"
+                android:paddingLeft="17dp"
+                android:background="@android:color/transparent"
+                android:tint="?colorAccent"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:srcCompat="@drawable/ic_close_black_24dp" />
+
+        </android.support.constraint.ConstraintLayout>
 
     </RelativeLayout>
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginTop="43.5dp"
-        android:background="@color/PayPro_Background">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/PayPro_Line"
-            android:minHeight="0.5dp" />
-    </TableLayout>
+    <View
+        android:id="@+id/divider"
+        style="@style/Divider"
+        app:layout_constraintTop_toBottomOf="@id/app_custom_toolbars"
+        app:layout_constraintBottom_toTopOf="@id/frame_layout"/>
 
     <FrameLayout
         android:id="@+id/frame_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/navigation"
-        android:layout_below="@+id/app_toolbar"
+        android:layout_height="0dp"
         android:animateLayoutChanges="true"
-        android:background="@color/PayPro_Background">
-
+        android:background="@color/PayPro_Background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider"
+        app:layout_constraintBottom_toTopOf="@id/navigation">
     </FrameLayout>
 
-<android.support.design.widget.BottomNavigationView
-    android:id="@+id/navigation"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:background="?android:attr/windowBackground"
-    app:itemBackground="?android:attr/windowBackground"
-    app:menu="@menu/navigation"/>
-</RelativeLayout>
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:itemBackground="?android:attr/windowBackground"
+        app:menu="@menu/navigation"/>
+
+</android.support.constraint.ConstraintLayout>
