--- a/app/src/main/res/layout/contacts_list_fragment.xml
+++ b/app/src/main/res/layout/contacts_list_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_view"
@@ -8,73 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".ContactsFragment">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:theme="@style/PayProTheme.ActionBar"
-        android:id="@+id/appbar">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:textColor="@android:color/white"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?colorPrimary"
-            app:titleTextColor="@android:color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/content"
-            app:title="@string/choose_contact"
-            app:subtitle=""
-            app:titleMarginStart="16dp"
-            app:subtitleTextColor="@android:color/white">
-
-            <!--<android.support.constraint.ConstraintLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent">-->
-
-                <!--<TextView-->
-                    <!--android:id="@+id/toolbar_title"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="@string/choose_contact"-->
-                    <!--android:textColor="@android:color/white"-->
-                    <!--android:textSize="22sp"-->
-                    <!--app:layout_constraintBottom_toTopOf="@+id/toolbar_subtitle"-->
-                    <!--app:layout_constraintTop_toTopOf="parent" />-->
-
-                <!--<TextView-->
-                    <!--android:id="@+id/toolbar_subtitle"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text=""-->
-                    <!--android:textColor="@android:color/white"-->
-                    <!--android:textSize="13sp"-->
-                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
-                    <!--app:layout_constraintTop_toBottomOf="@+id/toolbar_title" />-->
-
-
-                <!--<android.support.v7.widget.SearchView-->
-                    <!--android:id="@+id/search_view"-->
-                    <!--style="@style/SearchViewStyle"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--app:layout_constraintEnd_toEndOf="parent" />-->
-
-            <!--</android.support.constraint.ConstraintLayout>-->
-
-        </android.support.v7.widget.Toolbar>
-
-    </android.support.design.widget.AppBarLayout>
-
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white"
-        android:layout_marginTop="?attr/actionBarSize"
-        app:layout_constraintTop_toBottomOf="@+id/appbar">
+        android:background="@android:color/white">
 
         <ListView
             android:id="@+id/contacts_list"
@@ -196,4 +133,4 @@
 
     </FrameLayout>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
