--- a/app/src/main/res/layout/sendmoney_send_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_send_fragment.xml
@@ -45,6 +45,10 @@
             android:textSize="36sp"
             app:layout_constraintTop_toBottomOf="@id/ready_to_send_label" />
 
+        <View
+            style="@style/Divider"
+            app:layout_constraintTop_toBottomOf="@id/ready_to_send_text" />
+
         <TextView
             android:id="@+id/to_label"
             android:layout_width="wrap_content"
@@ -57,6 +61,10 @@
             android:text="@string/to"
             app:layout_constraintTop_toBottomOf="@id/ready_to_send_text"
             android:textSize="13sp"/>
+
+        <View
+            style="@style/Divider"
+            app:layout_constraintTop_toTopOf="@id/to_text" />
 
         <LinearLayout
             android:id="@+id/to_text"
@@ -106,6 +114,10 @@
                 app:layout_constraintTop_toBottomOf="@id/to_text_3" />
 
         </LinearLayout>
+
+        <View
+            style="@style/Divider"
+            app:layout_constraintTop_toBottomOf="@id/to_text" />
 
         <TextView
             android:id="@+id/cell_description"
