--- a/app/src/main/res/layout/activity_passcode.xml
+++ b/app/src/main/res/layout/activity_passcode.xml
@@ -36,8 +36,9 @@
                 android:id="@+id/progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:indeterminateDrawable="@drawable/custom_progress_loader"
+                android:indeterminateTintMode="src_atop"
+                android:indeterminateTint="@android:color/white"
+                android:layout_gravity="center"
                 android:visibility="gone" />
 
         </LinearLayout>
