--- a/app/src/main/res/layout/activity_phone_number.xml
+++ b/app/src/main/res/layout/activity_phone_number.xml
@@ -83,8 +83,9 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="17dp"
             android:layout_marginRight="17dp"
-            android:indeterminate="true"
-            android:indeterminateDrawable="@drawable/custom_progress_loader_blue"
+            android:indeterminateTintMode="src_atop"
+            android:indeterminateTint="@color/pp_light_purple"
+            android:layout_gravity="center"
             android:visibility="invisible" />
 
     </RelativeLayout>
