--- a/app/src/main/res/layout/contacts_list_fragment.xml
+++ b/app/src/main/res/layout/contacts_list_fragment.xml
@@ -22,19 +22,20 @@
         <LinearLayout
             android:id="@+id/progress_layout"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="55dp"
             android:gravity="center"
             android:layout_gravity="center"
             android:orientation="horizontal"
             android:clickable="false">
 
-            <ProgressBar
+              <ProgressBar
                 android:id="@+id/progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:indeterminateDrawable="@drawable/custom_progress_loader_blue"
-                android:indeterminate="true"/>
+                android:visibility="visible"
+                android:indeterminateTintMode="src_atop"
+                android:indeterminateTint="@color/pp_light_purple"
+                android:layout_gravity="center" />
 
         </LinearLayout>
 
