--- a/app/src/main/res/layout/sendmoney_send_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_send_fragment.xml
@@ -149,8 +149,9 @@
                 android:id="@+id/progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
-                android:indeterminate="true"
-                android:indeterminateDrawable="@drawable/custom_progress_loader_black" />
+                android:indeterminateTintMode="src_atop"
+                android:indeterminateTint="@android:color/black"
+                android:layout_gravity="center" />
 
         </LinearLayout>
 
